--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,7 @@
 /.env.local
 /.env.local.php
 /.env.*.local
+/.env*
 /config/secrets/prod/prod.decrypt.private.php
 /public/bundles/
 /var/
@@ -14,6 +15,3 @@
 .phpunit.result.cache
 /phpunit.xml
 ###< symfony/phpunit-bridge ###
-
-/.env
-/.env.test
